Resolve #18 Update Alt Text
* Update alt text to be more descriptive
* Add fig captions to the individual mayor pages

--- a/index.html
+++ b/index.html
@@ -13,20 +13,20 @@ title: Metro Mayor's Task Force on Housing
 <main>
   <section class="task-force">
     <div class="task-force-members">
-      <a href="municipalities/arlington.html"><img class="task-force-member" id="first-task-force-member" alt="Task force member from Arlington" src="images/Arlington.png"></a>
-      <a href="municipalities/boston.html"><img class="task-force-member" alt="Task force member from Boston" src="images/Boston.png"></a>
-      <a href="municipalities/braintree.html"><img class="task-force-member" alt="Task force member from Braintree" src="images/braintree.png"></a>
-      <a href="municipalities/brookline.html"><img class="task-force-member" alt="Task force member from Brookline" src="images/brookline.png"></a>
-      <a href="municipalities/cambridge.html"><img class="task-force-member" alt="Task force member from Cambridge" src="images/cambridge.png"></a>
-      <a href="municipalities/chelsea.html"><img class="task-force-member" alt="Task force member from Chelsea" src="images/chelsea.png"></a>
-      <a href="municipalities/everett.html"><img class="task-force-member" alt="Task force member from Everett" src="images/Everett.png"></a>
-      <a href="municipalities/malden.html"><img class="task-force-member" alt="Task force member from Malden" src="images/Malden.png"></a>
-      <a href="municipalities/medford.html"><img class="task-force-member" alt="Task force member from Medford" src="images/reardon.jpg"></a>
-      <a href="municipalities/melrose.html"><img class="task-force-member" alt="Task force member from Melrose" src="images/melrose.png"></a>
-      <a href="municipalities/newton.html"><img class="task-force-member" alt="Task force member from Newton" src="images/newton.png"></a>
-      <a href="municipalities/quincy.html"><img class="task-force-member" alt="Task force member from Quincy" src="images/quincy.png"></a>
-      <a href="municipalities/revere.html"><img class="task-force-member" alt="Task force member from Revere" src="images/revere.png"></a>
-      <a href="municipalities/somerville.html"><img class="task-force-member" alt="Task force member from Somerville" src="images/somerville.png"></a>
+      <a href="municipalities/arlington.html"><img class="task-force-member" id="first-task-force-member" alt="Town Manager Adam Chapdelaine from Arlington" src="images/Arlington.png"></a>
+      <a href="municipalities/boston.html"><img class="task-force-member" alt="Mayor Martin Walsh from Boston" src="images/Boston.png"></a>
+      <a href="municipalities/braintree.html"><img class="task-force-member" alt="Mayor Joseph Sullivan from Braintree" src="images/braintree.png"></a>
+      <a href="municipalities/brookline.html"><img class="task-force-member" alt="Town Administrator Mel Kleckner from Brookline" src="images/brookline.png"></a>
+      <a href="municipalities/cambridge.html"><img class="task-force-member" alt="City Manager Louis Depasquale from Cambridge" src="images/cambridge.png"></a>
+      <a href="municipalities/chelsea.html"><img class="task-force-member" alt="City Manager Thomas Ambrosino from Chelsea" src="images/chelsea.png"></a>
+      <a href="municipalities/everett.html"><img class="task-force-member" alt="Mayor Carlo DeMaria Jr. from Everett" src="images/Everett.png"></a>
+      <a href="municipalities/malden.html"><img class="task-force-member" alt="Mayor Gary Christenson from Malden" src="images/Malden.png"></a>
+      <a href="municipalities/medford.html"><img class="task-force-member" alt="Mayor Stephanie Muccini Burke from Medford" src="images/reardon.jpg"></a>
+      <a href="municipalities/melrose.html"><img class="task-force-member" alt="Mayor Gail Infurna from Melrose" src="images/melrose.png"></a>
+      <a href="municipalities/newton.html"><img class="task-force-member" alt="Mayor Ruthanne Fuller from Newton" src="images/newton.png"></a>
+      <a href="municipalities/quincy.html"><img class="task-force-member" alt="Mayor Thomas Koch from Quincy" src="images/quincy.png"></a>
+      <a href="municipalities/revere.html"><img class="task-force-member" alt="Mayor Brian Arrigo from Revere" src="images/revere.png"></a>
+      <a href="municipalities/somerville.html"><img class="task-force-member" alt="Mayor Joseph Curtatone from Somerville" src="images/somerville.png"></a>
       <a href="municipalities/winthrop.html"><img class="task-force-member" alt="Task force member from Winthrop" src="images/reardon.jpg"></a>
     </div>
     <h2 class="task-force-text">
@@ -41,7 +41,7 @@ title: Metro Mayor's Task Force on Housing
       <div id="left-bottom-border"></div>
     </h2>
 
-    <p>Metro Boston is experiencing a housing crisis. The rate of housing production in Massachusetts is one of the lowest in the country, even as we’ve seen increases in population and employment. Since 2010, the Commonwealth has added nearly 250,000 residents and 350,000 new jobs, while permitting only 81,000 new housing units (U.S. Census Bureau and U.S. Bureau of Labor Statistics). High demand and inadequate housing production contribute to rapidly rising home prices throughout eastern Massachusetts, so that housing here has become among the highest cost in the nation. Limited supply makes it difficult for Metro Boston residents to find housing that works for them, and for employers to retain and recruit workers. </p>
+    <p>Metro Boston is experiencing a housing crisis. The rate of housing production in Massachusetts is one of the lowest in the country, even as we’ve seen increases in population and employment. Since 2010, the Commonwealth has added nearly 250,000 residents and 350,000 new jobs, while permitting only 81,000 new housing units (U.S. Census Bureau and U.S. Bureau of Labor Statistics). High demand and inadequate housing production contribute to rapidly rising home prices throughout eastern Massachusetts, so that housing here has become among the highest cost in the nation. Limited supply makes it difficult for Metro Boston residents to find housing that works for them, and for employers to retain and recruit workers.</p>
 
     <p>To accommodate a growing economy, Metro Boston will need to build about 330,000 additional units between 2010 and 2030 (MAPC Population and Housing Demand Projections). Furthermore, changing preferences and rapid job growth in and around Boston mean that an increasing share of this demand will be in the region’s Inner Core, putting pressure on the existing housing stock. Without additional units to meet that demand, rents and sale prices will continue to rise, and lower-income households will be pushed out of their communities.</p>
 
@@ -69,20 +69,20 @@ title: Metro Mayor's Task Force on Housing
       <li><b>Fair Housing.</b> We are committed to abolishing discrimination against tenants and buyers, and advancing fair and equitable access to housing opportunity for everyone.</li>
     </ol>
 
-    <img class="signature" alt="Signature of task force member from Chelsea" src="images/ambrosino-chelsea-01.svg">
-    <img class="signature" alt="Signature of task force member from Revere" src="images/arrigo-revere-01.svg">
-    <img class="signature" alt="Signature of task force member from Medford" src="images/burke-medford-01.svg">
-    <img class="signature" alt="Signature of task force member from Malden" src="images/christenson-malden-01.svg">
-    <img class="signature" alt="Signature of task force member from Somerville" src="images/curatone-somerville-01.svg">
-    <img class="signature" alt="Signature of task force member from Everett" src="images/demaria-everett-01.svg">
-    <img class="signature" alt="Signature of task force member from Cambridge" src="images/depasquale-cambridge-01.svg">
-    <img class="signature" alt="Signature of task force member from Melrose" src="images/dolan-melrose-01.svg">
-    <img class="signature" alt="Signature of task force member from Brookline" src="images/kleckner-brookline-01.svg">
-    <img class="signature" alt="Signature of task force member from Quincy" src="images/koch-quincy-01.svg">
-    <img class="signature" alt="Signature of task force member from Winthrop" src="images/mckenna-winthrop-01.svg">
-    <img class="signature" alt="Signature of task force member from Braintree" src="images/sullivan-braintree-01.svg">
-    <img class="signature" alt="Signature of task force member from Boston" src="images/walsh-boston-01.svg">
-    <img class="signature" alt="Signature of task force member from Newton" src="images/warren-newton-01.svg">
+    <img class="signature" alt="Signature of City Manager Thomas Ambrosino of Chelsea." src="images/ambrosino-chelsea-01.svg">
+    <img class="signature" alt="Signature of Mayor Brian Arrigo from Revere" src="images/arrigo-revere-01.svg">
+    <img class="signature" alt="Signature of Mayor Stephanie Muccini Burke from Medford" src="images/burke-medford-01.svg">
+    <img class="signature" alt="Signature of Mayor Gary Christenson from Malden" src="images/christenson-malden-01.svg">
+    <img class="signature" alt="Signature of Mayor Joseph Curtatone from Somerville" src="images/curatone-somerville-01.svg">
+    <img class="signature" alt="Signature of Mayor Carlo DeMaria, Jr. from Everett" src="images/demaria-everett-01.svg">
+    <img class="signature" alt="Signature of City Manager Louis Depasquale from Cambridge" src="images/depasquale-cambridge-01.svg">
+    <img class="signature" alt="Signature of Mayor Gail Infurna from Melrose" src="images/dolan-melrose-01.svg">
+    <img class="signature" alt="Signature of Town Administrator Mel Kleckner from Brookline" src="images/kleckner-brookline-01.svg">
+    <img class="signature" alt="Signature of Mayor Thomas Koch from Quincy" src="images/koch-quincy-01.svg">
+    <img class="signature" alt="Signature of Chief Terence Delehanty from Winthrop" src="images/mckenna-winthrop-01.svg">
+    <img class="signature" alt="Signature of Mayor Joseph Sullivan from Braintree" src="images/sullivan-braintree-01.svg">
+    <img class="signature" alt="Signature of Mayor Martin Walsh from Boston" src="images/walsh-boston-01.svg">
+    <img class="signature" alt="Signature of Mayor Ruthanne Fuller from Newton" src="images/warren-newton-01.svg">
 
     <a href="slide-show.html">
       <div id="housing">
