--- a/municipalities/braintree.html
+++ b/municipalities/braintree.html
@@ -5,8 +5,8 @@ title: Braintree
 <h1>Braintree</h1>
 <div class="container">
   <figure>
-    <img class="mayor" src="{{ "/images/braintree.png" | relative_url }}">
-    <figcaption></figcaption>
+    <img alt="Mayor Joseph Sullivan from Braintree" class="mayor" src="{{ "/images/braintree.png" | relative_url }}">
+    <figcaption>Mayor Joseph Sullivan</figcaption>
   </figure>
   <p class="quote">"Housing is the future of our community."</p>
 </div>
