--- a/municipalities/cambridge.html
+++ b/municipalities/cambridge.html
@@ -5,8 +5,8 @@ title: Cambridge
 <h1>Cambridge</h1>
 <div class="container">
   <figure>
-    <img class="mayor" src="{{ "/images/cambridge.png" | relative_url }}">
-    <figcaption>Mayor Marc C. McGovern</figcaption>
+    <img alt="City Manager Louis Depasquale from Cambridge" class="mayor" src="{{ "/images/cambridge.png" | relative_url }}">
+    <figcaption>City Manager Louis Depasquale</figcaption>
   </figure>
   <p class="quote">"Housing is the future of our community."</p>
 </div>
