--- a/municipalities/medford.html
+++ b/municipalities/medford.html
@@ -5,8 +5,8 @@ title: Medford
 <h1>Medford</h1>
 <div class="container">
   <figure>
-    <img class="mayor" src="{{ "/images/reardon.jpg" | relative_url }}">
-    <figcaption>Mayor Marty Walsh</figcaption>
+    <img alt="Mayor Stephanie Muccini Burke from Medford" class="mayor" src="{{ "/images/reardon.jpg" | relative_url }}">
+    <figcaption>Mayor Stephanie Muccini Burke</figcaption>
   </figure>
   <p class="quote">"Housing is the future of our community."</p>
 </div>
