--- a/municipalities/newton.html
+++ b/municipalities/newton.html
@@ -5,8 +5,8 @@ title: Newton
 <h1>Newton</h1>
 <div class="container">
   <figure>
-    <img class="mayor" src="{{ "/images/newton.png" | relative_url }}">
-    <figcaption>Mayor Fuller</figcaption>
+    <img alt="Mayor Ruthanne Fuller from Newton" class="mayor" src="{{ "/images/newton.png" | relative_url }}">
+    <figcaption>Mayor Ruthanne Fuller</figcaption>
   </figure>
   <p class="quote">"Housing is the future of our community."</p>
 </div>
