--- a/municipalities/somerville.html
+++ b/municipalities/somerville.html
@@ -5,8 +5,8 @@ title: Somerville
 <h1>Somerville</h1>
 <div class="container">
   <figure>
-    <img class="mayor" src="{{ "/images/somerville.png" | relative_url }}">
-    <figcaption>Mayor Marty Walsh</figcaption>
+    <img alt="Mayor Joseph Curtatone from Somerville" class="mayor" src="{{ "/images/somerville.png" | relative_url }}">
+    <figcaption>Mayor Joseph Curtatone</figcaption>
   </figure>
   <p class="quote">"Housing is the future of our community."</p>
 </div>
