--- a/municipalities/boston.html
+++ b/municipalities/boston.html
@@ -5,7 +5,7 @@ title: Boston
 <h1>Boston</h1>
 <div class="container">
   <figure>
-    <img class="mayor" src="{{ "/images/boston.png" | relative_url }}">
+    <img alt="Mayor Martin Walsh from Boston" class="mayor" src="{{ "/images/boston.png" | relative_url }}">
     <figcaption>Mayor Marty Walsh</figcaption>
   </figure>
   <p class="quote">"Housing is the future of our community."</p>
