--- a/municipalities/brookline.html
+++ b/municipalities/brookline.html
@@ -5,8 +5,8 @@ title: Brookline
 <h1>Brookline</h1>
 <div class="container">
   <figure>
-    <img class="mayor" src="{{ "/images/brookline.png" | relative_url }}">
-    <figcaption></figcaption>
+    <img alt="Town Administrator Mel Kleckner from Brookline" class="mayor" src="{{ "/images/brookline.png" | relative_url }}">
+    <figcaption>Town Administrator Mel Kleckner</figcaption>
   </figure>
   <p class="quote">"Housing is the future of our community."</p>
 </div>
