--- a/municipalities/everett.html
+++ b/municipalities/everett.html
@@ -5,7 +5,7 @@ title: Everett
 <h1>Everett</h1>
 <div class="container">
   <figure>
-    <img class="mayor" src="{{ "/images/Everett.png" | relative_url }}">
+    <img alt="Mayor Carlo DeMaria Jr. from Everett" class="mayor" src="{{ "/images/Everett.png" | relative_url }}">
     <figcaption>Mayor Carlo DeMaria, Jr.</figcaption>
   </figure>
   <p class="quote">"Housing is the future of our community."</p>
