--- a/municipalities/malden.html
+++ b/municipalities/malden.html
@@ -5,7 +5,7 @@ title: Malden
 <h1>Malden</h1>
 <div class="container">
   <figure>
-    <img class="mayor" src="{{ "/images/Malden.png" | relative_url }}">
+    <img alt="Mayor Gary Christenson from Malden" class="mayor" src="{{ "/images/Malden.png" | relative_url }}">
     <figcaption>Mayor Gary Christenson</figcaption>
   </figure>
   <p class="quote">"Housing is the future of our community."</p>
