--- a/municipalities/melrose.html
+++ b/municipalities/melrose.html
@@ -5,7 +5,7 @@ title: Melrose
 <h1>Melrose</h1>
 <div class="container">
   <figure>
-    <img class="mayor" src="{{ "/images/melrose.png" | relative_url }}">
+    <img alt="Mayor Gail Infurna from Melrose" class="mayor" src="{{ "/images/melrose.png" | relative_url }}">
     <figcaption>Mayor Gail Infurna</figcaption>
   </figure>
   <p class="quote">"Housing is the future of our community."</p>
