--- a/municipalities/winthrop.html
+++ b/municipalities/winthrop.html
@@ -5,8 +5,8 @@ title: Winthrop
 <h1>Winthrop</h1>
 <div class="container">
   <figure>
-    <img class="mayor" src="{{ "/images/reardon.jpg" | relative_url }}">
-    <figcaption>Mayor Marty Walsh</figcaption>
+    <img alt="Interim Town Manager Chief Terence Delehanty from Winthrop" class="mayor" src="{{ "/images/reardon.jpg" | relative_url }}">
+    <figcaption>Interim Town Manager Chief Terence Delehanty</figcaption>
   </figure>
   <p class="quote">"Housing is the future of our community."</p>
 </div>
