Resolve #19 Use Div for Max-Width
Instead of styling the body with max-width this commit styles a div and then moves the mayor div which acts differently into a sub-container.

--- a/municipalities/arlington.html
+++ b/municipalities/arlington.html
@@ -3,7 +3,7 @@ layout: default
 title: Arlington
 ---
 <h1>Arlington</h1>
-<div class="container">
+<div class="mayor-container">
   <figure>
     <img class="mayor" src="{{ "/images/arlington.png" | relative_url }}">
     <figcaption></figcaption>
