--- a/municipalities/cambridge.html
+++ b/municipalities/cambridge.html
@@ -3,7 +3,7 @@ layout: default
 title: Cambridge
 ---
 <h1>Cambridge</h1>
-<div class="container">
+<div class="mayor-container">
   <figure>
     <img class="mayor" src="{{ "/images/cambridge.png" | relative_url }}">
     <figcaption>Mayor Marc C. McGovern</figcaption>
