--- a/municipalities/everett.html
+++ b/municipalities/everett.html
@@ -3,7 +3,7 @@ layout: default
 title: Everett
 ---
 <h1>Everett</h1>
-<div class="container">
+<div class="mayor-container">
   <figure>
     <img class="mayor" src="{{ "/images/Everett.png" | relative_url }}">
     <figcaption>Mayor Carlo DeMaria, Jr.</figcaption>
