--- a/municipalities/newton.html
+++ b/municipalities/newton.html
@@ -3,7 +3,7 @@ layout: default
 title: Newton
 ---
 <h1>Newton</h1>
-<div class="container">
+<div class="mayor-container">
   <figure>
     <img class="mayor" src="{{ "/images/newton.png" | relative_url }}">
     <figcaption>Mayor Fuller</figcaption>
