--- a/municipalities/somerville.html
+++ b/municipalities/somerville.html
@@ -3,7 +3,7 @@ layout: default
 title: Somerville
 ---
 <h1>Somerville</h1>
-<div class="container">
+<div class="mayor-container">
   <figure>
     <img class="mayor" src="{{ "/images/somerville.png" | relative_url }}">
     <figcaption>Mayor Marty Walsh</figcaption>
