--- a/municipalities/boston.html
+++ b/municipalities/boston.html
@@ -3,7 +3,7 @@ layout: default
 title: Boston
 ---
 <h1>Boston</h1>
-<div class="container">
+<div class="mayor-container">
   <figure>
     <img class="mayor" src="{{ "/images/boston.png" | relative_url }}">
     <figcaption>Mayor Marty Walsh</figcaption>
