--- a/municipalities/braintree.html
+++ b/municipalities/braintree.html
@@ -3,7 +3,7 @@ layout: default
 title: Braintree
 ---
 <h1>Braintree</h1>
-<div class="container">
+<div class="mayor-container">
   <figure>
     <img class="mayor" src="{{ "/images/braintree.png" | relative_url }}">
     <figcaption></figcaption>
