--- a/municipalities/brookline.html
+++ b/municipalities/brookline.html
@@ -3,7 +3,7 @@ layout: default
 title: Brookline
 ---
 <h1>Brookline</h1>
-<div class="container">
+<div class="mayor-container">
   <figure>
     <img class="mayor" src="{{ "/images/brookline.png" | relative_url }}">
     <figcaption></figcaption>
