--- a/municipalities/chelsea.html
+++ b/municipalities/chelsea.html
@@ -3,7 +3,7 @@ layout: default
 title: Chelsea
 ---
 <h1>Chelsea</h1>
-<div class="container">
+<div class="mayor-container">
   <figure>
     <img class="mayor" src="{{ "/images/chelsea.png" | relative_url }}">
     <figcaption></figcaption>
