--- a/municipalities/malden.html
+++ b/municipalities/malden.html
@@ -3,7 +3,7 @@ layout: default
 title: Malden
 ---
 <h1>Malden</h1>
-<div class="container">
+<div class="mayor-container">
   <figure>
     <img class="mayor" src="{{ "/images/Malden.png" | relative_url }}">
     <figcaption>Mayor Gary Christenson</figcaption>
