--- a/municipalities/melrose.html
+++ b/municipalities/melrose.html
@@ -3,7 +3,7 @@ layout: default
 title: Melrose
 ---
 <h1>Melrose</h1>
-<div class="container">
+<div class="mayor-container">
   <figure>
     <img class="mayor" src="{{ "/images/melrose.png" | relative_url }}">
     <figcaption>Mayor Gail Infurna</figcaption>
