--- a/municipalities/quincy.html
+++ b/municipalities/quincy.html
@@ -3,7 +3,7 @@ layout: default
 title: Quincy
 ---
 <h1>Quincy</h1>
-<div class="container">
+<div class="mayor-container">
   <figure>
     <img class="mayor" src="{{ "/images/quincy.png" | relative_url }}">
     <figcaption></figcaption>
