--- a/municipalities/revere.html
+++ b/municipalities/revere.html
@@ -3,7 +3,7 @@ layout: default
 title: Revere
 ---
 <h1>Revere</h1>
-<div class="container">
+<div class="mayor-container">
   <figure>
     <img class="mayor" src="{{ "/images/revere.png" | relative_url }}">
     <figcaption></figcaption>
