--- a/municipalities/winthrop.html
+++ b/municipalities/winthrop.html
@@ -3,7 +3,7 @@ layout: default
 title: Winthrop
 ---
 <h1>Winthrop</h1>
-<div class="container">
+<div class="mayor-container">
   <figure>
     <img class="mayor" src="{{ "/images/reardon.jpg" | relative_url }}">
     <figcaption>Mayor Marty Walsh</figcaption>
