Resolve #38 Add Favicon for Tab
This commit adds a proposed favicon for the MMC tab

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <title>Regional Housing Task Force</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="/bundle.css">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"/>
   </head>
   <body>
     <div id="root">
