--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"/>
   </head>
   <body>
-    <div id="root">
+    <div id="root"></div>
     <script src="/bundle.js"></script>
   </body>
 </html>
